external/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: route-external-service
  name: route-external-service
spec: {}
