external/service.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-service-1 # by convention, use the name of the Service
  labels:
    kubernetes.io/service-name: external-service
addressType: IPv4
ports:
  - name: '' 
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
    - "52.200.142.250" # The IP Address for Redhat.com
