external/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: external-service
  name: external-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: external-service
    weight: 100
  wildcardPolicy: None
